[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -1,11 +1,11 @@
 body {
     font-family: sans-serif;
-    background-color: lightgrey;
+    background-color: orange;
     margin-top: 75px;
 }
 
 .center {
-    text-align: left;
+    text-align: center;
 }
 
 .text-big {
